--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,11 +3,14 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --span: #f2bc27;
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
+  --color-secondary: var(--secondary);
+  --color-span: var(--span);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
 }
@@ -16,6 +19,16 @@
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
+    --secondary: #242424;
+    --span: #d6a727;
+  }
+}
+
+* {
+  &:focus {
+    outline-color: var(--span);
+    outline-width: 1px;
+    outline-style: solid;
   }
 }
 
